--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,11 @@
             </thead>
             <tbody>
                 <tr>
+                    <td> {{nombre2}} </td>
+                    <td> capitalizado </td>
+                    <td> {{ nombre2 | capitalizado: true }}</td>
+                </tr>
+                <tr>
                     <td> {{nombre}} </td>
                     <td> uppercase </td>
                     <td> {{ nombre | uppercase }}</td>
@@ -67,6 +72,56 @@
                     <td> currency:'CAD' </td>
                     <td> {{ salario | currency:'CAD':'symbol' }}</td>
                 </tr>
+                <tr>
+                    <td> {{valorPromesa}} </td>
+                    <td> async </td>
+                    <td> {{ valorPromesa | async }}</td>
+                </tr>
+                <tr>
+                    <td> {{fecha}} </td>
+                    <td> date </td>
+                    <td> {{ fecha | date }}</td>
+                </tr>
+                <tr>
+                    <td> {{fecha}} </td>
+                    <td> date date:'medium' </td>
+                    <td> {{ fecha | date:'medium' }}</td>
+                </tr>
+                <tr>
+                    <td> {{fecha}} </td>
+                    <td> date date:'short' </td>
+                    <td> {{ fecha | date:'short' }}</td>
+                </tr>
+                <tr>
+                    <td> {{fecha}} </td>
+                    <td> date date:'MMMM - dd' </td>
+                    <td> {{ fecha | date: 'MMMM - dd' }}</td>
+                </tr>
+                <tr>
+                    <td> {{fecha}} </td>
+                    <td> date date: 'MMMM - dd':'':'en' </td>
+                    <td> {{ fecha | date: 'MMMM - dd':'':'en' }}</td>
+                </tr>
+                <tr>
+                    <td> {{fecha}} </td>
+                    <td>
+                        date date: 'MMMM - dd':'':'{{idioma}}'
+                        <br>
+                        <button class="mr-1 btn btn-primary" (click)="cambiarIdiomaEsp()">Español</button>
+                        <button class="mr-1 btn btn-secondary" (click)="cambiarIdiomaEn()">Inglés</button>
+                        <button class="mr-1 btn btn-success" (click)="cambiarIdiomaFr()">Francés</button>
+                    </td>
+                    <td> {{ fecha | date: 'MMMM - dd':'':idioma }}</td>
+                </tr>
+                <tr>
+                    <td> {{nombre}} </td>
+                    <td>
+                        contrasena:{{activar}}
+                        <br>
+                        <button (click)="activarContrasena()" class="btn btn-outline-primary">Activar/Desactivar</button>
+                    </td>
+                    <td> {{ nombreCont | contrasena : activar }}</td>
+                </tr>
             </tbody>
         </table>
         <h4>Slice</h4>
@@ -80,6 +135,15 @@
         <div class="row mb-5">
             <div class="col">
                 {{heroe | json}}
+            </div>
+        </div>
+
+        <h3 class="mt-4"> Dom Seguro </h3>
+        <hr>
+        <div class="row mb-5">
+            <div class="col">
+                <iframe width="560" height="315" [src]="videoUrl | domseguro" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
             </div>
         </div>
 
